# Modulo1

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
db/: chroma.sqlite3
faiss_index/: index.faiss  index.pkl
src/: app.py  rag.py
